<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      tools:context=".view.fragments.KeyboardFragment"
                      xmlns:tools="http://schemas.android.com/tools"
                      android:orientation="vertical"
                      android:layout_weight="1"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.65">

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_parenteses_esquerdo"
                        android:layout_weight="1"
                        android:id="@+id/btn_keyboard_parenteses_esquerdo" />

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_parenteses_direito"
                        android:id="@+id/btn_keyboard_parenteses_direito"
                        android:layout_weight="1" />

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_mudar_sinal"
                        android:id="@+id/btn_keyboard_mudar_sinal"
                        android:layout_weight="1" />

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_resto"
                        android:id="@+id/btn_keyboard_resto"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_somar"
                        android:id="@+id/btn_keyboard_soma"
                        android:layout_weight="1" />

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_subtrair"
                        android:layout_weight="1"
                        android:id="@+id/btn_keyboard_subt" />

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_multiplicar"
                        android:id="@+id/btn_keyboard_mult"
                        android:layout_weight="1"/>

                    <Button
                        style="@style/AppTheme.KeyBoard.OperacoesButtons"
                        android:layout_height="match_parent"
                        android:text="@string/keyboard_dividir"
                        android:id="@+id/btn_keyboard_div"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_keyboard_7"
                    android:layout_weight="1"
                    android:text="@string/kayboard_7" />

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_8"
                    android:layout_weight="1"
                    android:id="@+id/btn_keyboard_8" />

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_9"
                    android:id="@+id/btn_keyboard_9"
                    android:layout_weight="1" />

                <ImageButton
                    style="@style/AppTheme.KeyBoard.ApagarButton"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_delete_all"
                    android:id="@+id/btn_keyboard_apagar_tudo"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_4"
                    android:id="@+id/btn_keyboard_4"
                    android:layout_weight="1" />

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_5"
                    android:layout_weight="1"
                    android:id="@+id/btn_keyboard_5" />

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_6"
                    android:id="@+id/btn_keyboard_6"
                    android:layout_weight="1" />

                <ImageButton
                    style="@style/AppTheme.KeyBoard.ApagarButton"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_delete"
                    android:id="@+id/btn_keyboard_apagar"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_1"
                    android:id="@+id/btn_keyboard_1"
                    android:layout_weight="1" />

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_2"
                    android:layout_weight="1"
                    android:id="@+id/btn_keyboard_2" />

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_3"
                    android:id="@+id/btn_keyboard_3"
                    android:layout_weight="1" />

                <Button
                    style="@style/AppTheme.KeyBoard.OperacoesButtons"
                    android:layout_height="match_parent"
                    android:text="@string/keyboard_raiz"
                    android:id="@+id/btn_keyboard_raiz"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/kayboard_0"
                    android:id="@+id/btn_keyboard_0"
                    android:layout_weight="1" />

                <Button
                    style="@style/AppTheme.KeyBoard.NumberButtons"
                    android:layout_height="match_parent"
                    android:text="@string/keyboard_ponto"
                    android:layout_weight="1"
                    android:id="@+id/btn_keyboard_ponto" />

                <Button
                    style="@style/AppTheme.KeyBoard.Igual"
                    android:layout_height="match_parent"
                    android:text="@string/keyboard_igual"
                    android:id="@+id/btn_keyboard_igual"
                    android:layout_weight="2" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="18"
            android:background="@color/colorKeyBoarOperacoesEspeciaisNormal" />

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:fitsSystemWindows="true">

        <include layout="@layout/keyboard_extra"/>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
